# motpy_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
launch/: example_realsense.launch  example_webcam.launch  face_detection.launch.py  face_tracking.launch.py
motpy_ros/: CMakeLists.txt  package.xml  setup.py
motpy_ros/launch/: darknet_tracking.launch  example_darknet.launch.py  example_mosaic.launch  example_mosaic.launch.py  example_mosaic_ralsense.launch.py  example_realsense.launch  example_srv.launch  example_webcam.launch  tracking_servo.launch
motpy_ros/launch/old/: face_detector.launch  face_tracking.launch.py  simple_webcam.launch
motpy_ros/motpy_ros/: darknet_tracking.py  face_detect.py  mosaic_bbox.py
motpy_ros/scripts/: bbox2arduino.py  darknet_tracking.py  face_detect.py  face_tracking.py  face_tracking_using_srv.py  mosaic_bbox.py  tracking_srv.py
motpy_ros/scripts/old/: face_tracking.py
motpy_ros/srv/: motpy_bbox.srv
scripts/: darknet_tracking.py  face_detect.py  face_tracking.py  mosaic_bbox.py
scripts/old/: face_tracking.py
