<?xml version="1.0"?>
<package format="2">
  <name>motpy_ros</name>
  <version>0.0.0</version>
  <description>The motpy_ros package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
