<?xml version="1.0"?>
<package format="2">
  <name>motpy_ros</name>
  <version>0.0.0</version>
  <description>The motpy_ros package</description>

  <maintainer email="ray255ar@gmail.com">ar-ray-code</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
