<?xml version="1.0"?>
<package format="2">
  <name>motpy_ros</name>
  <version>0.0.0</version>
  <description>The motpy_ros package</description>

  <maintainer email="ray255ar@gmail.com">Ar-Ray-code</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  
  <build_depend>darknet_ros_msgs</build_depend>
  <build_export_depend>darknet_ros_msgs</build_export_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>
  
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_generation</exec_depend>

</package>
