<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motpy_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ray255ar@gmail.com">ubuntu</maintainer>
  <license>Apache License, Version 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>darknet_ros__msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
